# moria

./: .gitignore  Cargo.toml
examples/: factorial.moria  fibonacci.moria
src/: ast.rs  error.rs  evaluator.rs  lib.rs  main.rs  parser.rs  repl.rs  type_infer.rs  vm.rs
tests/: chez_file_compat_snapshots.rs  eval_snapshots.rs  type_infer_snapshots.rs  value_type_snapshots.rs
tests/fixtures/r7rs-minimal/: arith.scm  bindings.scm  lists.scm  logic.scm
tests/snapshots/: chez_file_compat_snapshots__chez_file_arith.scm.snap  chez_file_compat_snapshots__chez_file_bindings.scm.snap  chez_file_compat_snapshots__chez_file_lists.scm.snap  chez_file_compat_snapshots__chez_file_logic.scm.snap
