[package]
name = "moria"
version = "0.1.0"
edition = "2021"
description = "A minimal implementation of the Moria language"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Parser combinators
chumsky = "0.10.0"

# Error handling
thiserror = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# WebAssembly
wasmtime = "12.0"

[dev-dependencies]
# Testing
insta = "1.30" 

