[package]
name = "moria"
version = "0.1.0"
edition = "2021"
description = "A minimal implementation of the Moria language"
authors = ["Chojan Shang <psiace@apache.org>"]

[dependencies]
# Parser combinators
chumsky = "0.10.0"

# Error handling
thiserror = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
# Testing
insta = "1.30" 

